# Ascii-Forge

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
ascii_forge/: __init__.py  ascii_mapper.py  braille_mapper.py  html_exporter.py  image_exporter.py  image_loader.py  main.py  processor.py  renderer.py
src/: ascii_mapper.py  html_exporter.py  image_loader.py  main.py  processor.py  renderer.py
